<resources>
    <string name="app_name">Proyecto_1</string>
    <string name="resetear">Resetear</string>
    <string name="suma">+</string>
    <string name="contador">Contador:</string>
    <string name="_0">0</string>
    <string name="count_negative">Count Negative</string>
    <string name="resta">-</string>
    <string name="visitante">Visitante</string>
    <string name="local">Local</string>
    <string name="guion">-</string>
    <string name="button">Button</string>
    <string name="Deshacer">Deshacer</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
</resources>
